# jsi-snippets

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-jsi-module.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativejsimodule/: JsiModule.java  JsiModuleModule.java  JsiModulePackage.java  JsiPackage.java
cpp/: react-native-jsi-module.cpp  react-native-jsi-module.h
example/: app.json  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativejsimodule/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativejsimodule/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/JsiModuleExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/JsiModuleExample.xcodeproj/: project.pbxproj
example/ios/JsiModuleExample.xcodeproj/xcshareddata/xcschemes/: JsiModuleExample.xcscheme
example/src/: App.tsx
ios/: JsiModule.h  JsiModule.mm
ios/JsiModule.xcodeproj/: project.pbxproj
src/: index.tsx
